fix: features not centered

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -343,13 +343,13 @@ header .intro-text {
   background: #f6f6f6;
 }
 .big-icons > i.fa  {
-  font-size: 38px;
+  font-size: 45px;
   margin-bottom: 20px;
   transition: all 0.5s;
   color: #fff;
-  width: 100px;
-  height: 100px;
-  padding: 30px 0;
+  width: 120px;
+  height: 120px;
+  padding: 40px 0;
   border-radius: 50%;
   background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
